func unlink director from company
