# storage/api-docs/api-docs.json
@@ -4113,6 +4113,45 @@
                 }
             }
         },
+        "/api/director-unlink/{uuid}": {
+            "get": {
+                "tags": [
+                    "Director"
+                ],
+                "summary": "Unlink director from company",
+                "description": "Unlink director from company",
+                "operationId": "unlink_director",
+                "parameters": [
+                    {
+                        "name": "uuid",
+                        "in": "path",
+                        "description": "director uuid",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Not Authenticated"
+                    },
+                    "403": {
+                        "description": "Not Autorized"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
+        },
         "/api/department": {
             "get": {
                 "tags": [
